[metadata]
name = k8sapp-vault
summary = StarlingX sysinv extensions for vault
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_vault

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    vault = systemconfig.helm_plugins.vault

systemconfig.helm_plugins.vault =
    001_vault = k8sapp_vault.helm.vault:VaultHelm
    002_vault-psp-rolebinding = k8sapp_vault.helm.psp_rolebinding:PSPRolebindingHelm
[wheel]
universal = 1
